--- a/source/Spydersoft.Identity/Views/Clients/Index.cshtml
+++ b/source/Spydersoft.Identity/Views/Clients/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="card-style mb-30">
                 <div class="table-wrapper table-responsive">
-                    <table class="table">
+                    <table class="table" aria-label="Clients">
                         <thead class="thead-dark">
                             <tr>
                                 <th>Client Id</th>
