--- a/source/Spydersoft.Identity/Views/Manage/UserClaimsInfo.cshtml
+++ b/source/Spydersoft.Identity/Views/Manage/UserClaimsInfo.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="table-responsive">
-    <table class="table table-striped table-sm">
+    <table class="table table-striped table-sm" aria-label="User Claims">
         <thead>
             <tr>
                 <th>Type</th>
