--- a/source/Spydersoft.Identity/Views/ClientPostLogoutRedirectUris/Index.cshtml
+++ b/source/Spydersoft.Identity/Views/ClientPostLogoutRedirectUris/Index.cshtml
@@ -18,7 +18,7 @@
             <div class="card-style mb-30">
                 <form asp-action="Save" asp-route-id="@Model.Id">
                     @await Html.PartialAsync("_clientNavBar", Model.NavBar)
-                    <table class="table">
+                    <table class="table" aria-label="Client Post Logout URLs">
                         <thead class="thead-dark">
                             <tr>
                                 <th>@Html.LabelFor(model => model.NewItem.PostLogoutRedirectUri)</th>
