--- a/source/Spydersoft.Identity/Views/IdentityResourceProperties/Index.cshtml
+++ b/source/Spydersoft.Identity/Views/IdentityResourceProperties/Index.cshtml
@@ -18,7 +18,7 @@
                 <form asp-action="Save" asp-route-id="@Model.Id">
 
                     @await Html.PartialAsync("_identityResourceNavBar", Model.NavBar)
-                    <table class="table">
+                    <table class="table" aria-label="Identity Resource Properties">
                         <thead class="thead-dark">
                             <tr>
                                 <th>@Html.LabelFor(model => model.NewItem.Key)</th>
