--- a/source/Spydersoft.Identity/Views/IdentityResources/Index.cshtml
+++ b/source/Spydersoft.Identity/Views/IdentityResources/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="card-style mb-30">
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table" aria-label="Identity Resources">
                         <thead class="thead-dark">
                         <tr>
                             <th>Name</th>
