--- a/source/Spydersoft.Identity/Views/UserRoles/Edit.cshtml
+++ b/source/Spydersoft.Identity/Views/UserRoles/Edit.cshtml
@@ -46,7 +46,7 @@
                             <h3>Role Claims</h3>
                         </div>
                         <div class="card-content">
-                            <table class="table">
+                            <table class="table" aria-label="User Role Claims">
                                 <thead class="thead-dark">
                                     <tr>
                                         <th>@Html.LabelFor(model => model.NewClaim.Type)</th>
