--- a/source/Spydersoft.Identity/Views/UserRoles/Index.cshtml
+++ b/source/Spydersoft.Identity/Views/UserRoles/Index.cshtml
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="card-style mb-30">
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table" aria-label="User Roles">
                         <thead class="thead-dark">
                             <tr>
                                 <th>Name</th>
