--- a/source/Spydersoft.Identity/Views/Users/Edit.cshtml
+++ b/source/Spydersoft.Identity/Views/Users/Edit.cshtml
@@ -61,7 +61,7 @@
                                 <h3>Roles</h3>
                             </div>
                             <div class="card-content">
-                                <table class="table">
+                                <table class="table" aria-label="User Roles">
                                     <thead class="thead-dark">
                                         <tr>
                                             <th>Role</th>
@@ -111,7 +111,7 @@
                                 <h3>Claims</h3>
                             </div>
                             <div class="card-content">
-                                <table class="table">
+                                <table class="table" aria-label="User Claims">
                                     <thead class="thead-dark">
                                         <tr>
                                             <th>Type</th>
