Updated CSS and HTML for sonar bugs

--- a/source/Spydersoft.Identity/Assets/css/lineicons.css
+++ b/source/Spydersoft.Identity/Assets/css/lineicons.css
@@ -20,7 +20,7 @@ Author: lineicons.com
 -------------------------*/
 .lni {
   display: inline-block;
-  font: normal normal normal 1em/1 "LineIcons";
+  font: normal normal normal 1em/1 "LineIcons", sans-serif ;
   color: inherit;
   flex-shrink: 0;
   speak: none;
