--- a/source/Spydersoft.Identity/Views/Account/Login.cshtml
+++ b/source/Spydersoft.Identity/Views/Account/Login.cshtml
@@ -30,7 +30,7 @@
                             </p>
                         </div>
                         <div class="cover-image">
-                            <img src="/images/auth/signin-image.svg" alt="" />
+                            <img src="/images/auth/signin-image.svg" alt="Sign In" />
                         </div>
                         <div class="shape-image">
                             <img src="/images/auth/shape.svg" alt="" />
