--- a/source/Spydersoft.Identity/Views/Consent/Index.cshtml
+++ b/source/Spydersoft.Identity/Views/Consent/Index.cshtml
@@ -6,7 +6,7 @@
             <div>
                 @if (Model.ClientLogoUrl != null)
                 {
-                    <div class="client-logo"><img src="@Model.ClientLogoUrl"></div>
+                    <div class="client-logo"><img src="@Model.ClientLogoUrl" alt="Logo"></div>
                 }
                 <h3>
                     @Model.ClientName
