fix bad template for unauthorized user gravatar image

--- a/source/Spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
+++ b/source/Spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
@@ -61,7 +61,7 @@ else
             <div class="profile-info">
                 <div class="info">
                     <div class="image">
-                        <img src="string.Empty.ToGravatarUrl()" alt="My Gravatar" class="img-avatar" />
+                        <img src="@string.Empty.ToGravatarUrl()" alt="My Gravatar" class="img-avatar" />
                         <span class="status"></span>
                     </div>
                 </div>
